--- a/projects/01_fyyur/starter_code/templates/forms/new_artist.html
+++ b/projects/01_fyyur/starter_code/templates/forms/new_artist.html
@@ -29,10 +29,14 @@
         {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true) }}
       </div>
       <div class="form-group">
-          <label for="genres">Facebook Link</label>
-          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
-        </div>
-      <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
+          <label for="image-link">Image Link</label>
+          {{ form.image_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+      </div>
+      <div class="form-group">
+        <label for="facebook-link">Facebook Link</label>
+        {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+    </div>
+      <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
 {% endblock %}
