--- a/projects/01_fyyur/starter_code/templates/forms/new_artist.html
+++ b/projects/01_fyyur/starter_code/templates/forms/new_artist.html
@@ -33,9 +33,21 @@
           {{ form.image_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
       </div>
       <div class="form-group">
+        <label for="website">Website</label>
+        {{ form.website(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+      </div>
+      <div class="form-group">
         <label for="facebook-link">Facebook Link</label>
         {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
     </div>
+    <div class="form-group">
+      <label for="seeking-venue">Seeking Venue?</label>
+      {{ form.seeking_venue(class_ = 'form-check-input') }}
+   </div>
+   <div class="form-group">
+    <label for="seeking-description">Seeking Description</label>
+    {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
+  </div>
       <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
