--- a/projects/01_fyyur/starter_code/templates/forms/edit_venue.html
+++ b/projects/01_fyyur/starter_code/templates/forms/edit_venue.html
@@ -6,26 +6,26 @@
       <h3 class="form-heading">Edit venue <em>{{ venue.name }}</em> <a href="{{ url_for('index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
       <div class="form-group">
         <label for="name">Name</label>
-        {{ form.name(class_ = 'form-control', autofocus = true) }}
+        {{ form.name(class_ = 'form-control', value=venue.name, autofocus = true) }}
       </div>
       <div class="form-group">
           <label>City & State</label>
           <div class="form-inline">
             <div class="form-group">
-              {{ form.city(class_ = 'form-control', placeholder='City', autofocus = true) }}
+              {{ form.city(class_ = 'form-control', value=venue.city, placeholder='City', autofocus = true) }}
             </div>
             <div class="form-group">
-              {{ form.state(class_ = 'form-control', placeholder='State', autofocus = true) }}
+              {{ form.state(class_ = 'form-control',  value=venue.state, placeholder='State', autofocus = true) }}
             </div>
           </div>
       </div>
       <div class="form-group">
         <label for="address">Address</label>
-        {{ form.address(class_ = 'form-control', autofocus = true) }}
+        {{ form.address(class_ = 'form-control', value=venue.address, autofocus = true) }}
       </div>
       <div class="form-group">
           <label for="phone">Phone</label>
-          {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', autofocus = true) }}
+          {{ form.phone(class_ = 'form-control', value=venue.phone, placeholder='xxx-xxx-xxxx', autofocus = true) }}
         </div>
       <div class="form-group">
         <label for="genres">Genres</label>
@@ -33,8 +33,24 @@
         {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true) }}
       </div>
       <div class="form-group">
-          <label for="genres">Facebook Link</label>
-          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
+        <label for="image-link">Image Link</label>
+        {{ form.image_link(class_ = 'form-control', value=venue.image_link, placeholder='http://', autofocus = true) }}
+      </div>
+      <div class="form-group">
+        <label for="website">Website</label>
+        {{ form.website(class_ = 'form-control', value=venue.website, placeholder='http://', autofocus = true) }}
+      </div>
+      <div class="form-group">
+          <label for="facebook_link">Facebook Link</label>
+          {{ form.facebook_link(class_ = 'form-control', value=venue.facebook_link, placeholder='http://', id=form.state, autofocus = true) }}
+        </div>
+        <div class="form-group">
+          <label for="seeking-talent">Seeking Talent?</label>
+          {{ form.seeking_talent(class_ = 'form-check-input', checked=venue.seeking_talent) }}
+        </div>
+        <div class="form-group">
+          <label for="seeking-description">Seeking Description</label>
+          {{ form.seeking_description(class_ = 'form-control', value=venue.seeking_description, placeholder='', autofocus = true) }}
         </div>
       <input type="submit" value="Edit Venue" class="btn btn-primary btn-lg btn-block">
     </form>
