--- a/projects/01_fyyur/starter_code/templates/pages/search_artists.html
+++ b/projects/01_fyyur/starter_code/templates/pages/search_artists.html
@@ -12,6 +12,12 @@
 			</div>
 		</a>
 	</li>
+	<div style="margin:0 0 20px 40px">
+		{% if artist.num_upcoming_shows==0 %} No upcoming shows
+		{% elif artist.num_upcoming_shows==1  %} {{ artist.num_upcoming_shows }} upcoming show
+		{% else %} {{ artist.num_upcoming_shows }} upcoming shows
+		{% endif %}
+	</div>
 	{% endfor %}
 </ul>
 {% endblock %}
